src/styles.css
/* ... */
.rest {
  overflow: hidden;
}
.stretch {
  margin-left: -16px;
  margin-right: -16px;
}
.content,
.auto {
  margin-left: auto;
  margin-right: auto;
}
.content {
  max-width: 980px;
}
.auto {
  max-width: 1140px;
}
.cell-row {
  display: table;
  width: 100%;
}
.cell {
  display: table-cell;
}
.cell-top {
  vertical-align: top;
}
.cell-middle {
  vertical-align: middle;
}
.cell-bottom {
  vertical-align: bottom;
}
.hide {
  display: none !important;
}
.show-block,
.show {
  display: block !important;
}
.show-inline-block {
  display: inline-block !important;
}
@media (max-width: 1205px) {
  .auto {
    max-width: 95%;
  }
}

#jumbo-image {
  max-height: 20rem;
  /* TODO: Invert banner colors using CSS */
}

@media (max-width: 600px) {
  .modal-content {
    margin: 0 10px;
    width: auto !important;
  }
  .modal {
    padding-top: 30px;
  }
  .dropdown-hover.mobile .dropdown-content,
  .dropdown-click.mobile .dropdown-content {
    position: relative;
  }
  .hide-small {
    display: none !important;
  }
  .mobile {
    display: block;
    width: 100% !important;
  }
  .bar-item.mobile,
  .dropdown-hover.mobile,
  .dropdown-click.mobile {
    text-align: center;
  }
  .dropdown-hover.mobile,
  .dropdown-hover.mobile .btn,
  .dropdown-hover.mobile .button,
  .dropdown-click.mobile,
  .dropdown-click.mobile .btn,
  .dropdown-click.mobile .button {
    width: 100%;
  }
}
@media (max-width: 768px) {
  .modal-content {
    width: 500px;
  }
  .modal {
    padding-top: 50px;
  }
}
@media (min-width: 993px) {
  .modal-content {
    width: 900px;
  }
  .hide-large {
    display: none !important;
  }
  .sidebar.collapse {
    display: block !important;
  }
}
@media (max-width: 992px) and (min-width: 601px) {
  .hide-medium {
    display: none !important;
  }
}
@media (max-width: 992px) {
  .sidebar.collapse {
    display: none;
  }
  .main {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
  .auto {
    max-width: 100%;
  }
}
.top,
.bottom {
  position: fixed;
  width: 100%;
  z-index: 1;
}
.top {
  top: 0;
}
.bottom {
  bottom: 0;
}
.overlay {
  position: fixed;
  display: none;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 2;
}
.display-topleft {
  position: absolute;
  left: 0;
  top: 0;
}
.display-topright {
  position: absolute;
  right: 0;
  top: 0;
}
.display-bottomleft {
  position: absolute;
  left: 0;
  bottom: 0;
}
.display-bottomright {
  position: absolute;
  right: 0;
  bottom: 0;
}
.display-middle {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}
.display-left {
  position: absolute;
  top: 50%;
  left: 0%;
  transform: translate(0%, -50%);
  -ms-transform: translate(-0%, -50%);
}
.display-right {
  position: absolute;
  top: 50%;
  right: 0%;
  transform: translate(0%, -50%);
  -ms-transform: translate(0%, -50%);
}
.display-topmiddle {
  position: absolute;
  left: 50%;
  top: 0;
  transform: translate(-50%, 0%);
  -ms-transform: translate(-50%, 0%);
}
.display-bottommiddle {
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translate(-50%, 0%);
  -ms-transform: translate(-50%, 0%);
}
.display-container:hover .display-hover {
  display: block;
}
.display-container:hover span.display-hover {
  display: inline-block;
}
.display-hover {
  display: none;
}
.display-position {
  position: absolute;
}
.circle {
  border-radius: 50%;
}
.round-small {
  border-radius: 2px;
}
.round,
.round-medium {
  border-radius: 4px;
}
.round-large {
  border-radius: 8px;
}
.round-xlarge {
  border-radius: 16px;
}
.round-xxlarge {
  border-radius: 32px;
}
.row-padding,
.row-padding > .half,
.row-padding > .third,
.row-padding > .twothird,
.row-padding > .threequarter,
.row-padding > .quarter,
.row-padding > .col {
  padding: 0 8px;
}
.container,
.panel {
  padding: 0.01em 16px;
}
.panel {
  margin-top: 16px;
  margin-bottom: 16px;
}
.code,
.codespan {
  font-family: Consolas, "courier new";
  font-size: 16px;
}

#challenge-grid {
  display: grid;
  /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
  grid-template-columns: none;
  grid-auto-rows: 10rem;
  gap: 1rem;
  padding-top: 2rem;
}

.code {
  width: auto;
  background-color: #fff;
  padding: 8px 12px;
  border-left: 4px solid #4caf50;
  word-wrap: break-word;
}
.codespan {
  color: crimson;
  background-color: #f1f1f1;
  padding-left: 4px;
  padding-right: 4px;
  font-size: 110%;
}
.card,
.card-2 {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}
.card-4,
.hover-shadow:hover {
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
}
.spin {
  animation: spin 2s infinite linear;
}
@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(359deg);
  }
}
.animate-fading {
  animation: fading 10s infinite;
}
@keyframes fading {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.animate-opacity {
  animation: opac 0.8s;
}
@keyframes opac {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.animate-top {
  position: relative;
  animation: animatetop 0.4s;
}
@keyframes animatetop {
  from {
    top: -300px;
    opacity: 0;
  }
  to {
    top: 0;
    opacity: 1;
  }
}
.animate-left {
  position: relative;
  animation: animateleft 0.4s;
}
@keyframes animateleft {
  from {
    left: -300px;
    opacity: 0;
  }
  to {
    left: 0;
    opacity: 1;
  }
}
.animate-right {
  position: relative;
  animation: animateright 0.4s;
}
@keyframes animateright {
  from {
    right: -300px;
    opacity: 0;
  }
  to {
    right: 0;
    opacity: 1;
  }
}
.animate-bottom {
  position: relative;
  animation: animatebottom 0.4s;
}
@keyframes animatebottom {
  from {
    bottom: -300px;
    opacity: 0;
  }
  to {
    bottom: 0;
    opacity: 1;
  }
}
.animate-zoom {
  animation: animatezoom 0.6s;
}
/* ... */

